create/patch tagSkill ID
