# docs/swagger.yaml
@@ -28,6 +28,8 @@ definitions:
     properties:
       color:
         type: string
+      id:
+        type: integer
       name:
         type: string
     type: object
@@ -221,6 +223,19 @@ definitions:
       updatedAt:
         type: string
     type: object
+  response.TagSkillResponse:
+    properties:
+      color:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      order_count:
+        type: integer
+      vehicle_count:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
@@ -352,11 +367,6 @@ paths:
       - application/json
       description: Create multiple skills by plan
       parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
       - description: Skill list
         in: body
         name: body
@@ -369,7 +379,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handlers.CreateResponse'
+            items:
+              $ref: '#/definitions/response.TagSkillResponse'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -378,8 +390,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Create skill list
       tags:
       - skill
