# internal/dto/response/tag_skill.go
@@ -1,0 +1,9 @@
+package response
+
+type TagSkillResponse struct {
+	ID           uint   `json:"id"`
+	Name         string `json:"name"`
+	Color        string `json:"color"`
+	OrderCount   int64  `json:"order_count"`
+	VehicleCount int64  `json:"vehicle_count"`
+}
